--- a/LaMiaPizzeria/Views/Home/Index.cshtml
+++ b/LaMiaPizzeria/Views/Home/Index.cshtml
@@ -1,16 +1,15 @@
 ﻿
 
-
-
+<div class="container">
 
     <div class="row m-3 text-center">
-    <h2 style="font-family: 'Dancing Script', cursive;"><strong>JENNY'S PIZZA</strong></h2>
+        <h2 style="font-family: 'Dancing Script', cursive;"><strong>JENNY'S PIZZA</strong></h2>
     </div>
 
     <div class="row m-4">
         <div class="col-6">
         <img class="img-fluid shadow-lg rounded" src="https://th.bing.com/th/id/OIP.3-xcIRfKUEpN5IDxqZUPKwHaE7?pid=ImgDet&rs=1" alt="Immagine forno" style="width: 100%">
-        </div>
+    </div>
         <div class="col-6 text-center align-self-center">
             <a class="fs-2 text-black link-underline link-underline-opacity-0" href="@Url.Action("Index", "Pizza")" style="font-family: 'Dancing Script', cursive;">Venite a provare<br /> la nostra pizza cotta a legna!!</a>
         </div>
@@ -25,3 +24,52 @@
         </div>
     </div>    
 
+</div>
+<div>
+    <div class="d-flex my-4">
+        <div class="animation">
+            <p class="h1 text">Pizze in evidenza</p>
+        </div>
+    </div>
+
+    <div class="w-50 m-auto">
+        <div id="spinner" class="spinner-border text-primary" role="status">
+            <span>Loading...</span>
+        </div>
+    </div>
+
+    <div id="container_cards" class="d-none d-flex justify-content-between gap-3 flex-wrap">
+
+</div>
+
+
+</div>
+
+@section Scripts {
+        axios.get("https://localhost:7159/api/PizzaAPI/GetPizze").then((result) => {
+            const listPizzas = result.data;
+
+            if(listPizzas.length == 0){
+            document.getElementById("spinner").classList.add("d-none");
+            } else {
+            document.getElementById("container_cards").classList.remove("d-none");
+            document.getElementById("spinner").classList.add("d-none");
+
+            listArticles.forEach(pizza => {
+            document.getElementById("container_cards").innerHTML += `
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="${pizza.image}" alt="${pizza.title}">
+                <div class="card-body">
+                    <h5 class="card-title">${pizza.name}</h5>
+                    <p class="card-text">${pizza.description}</p>
+                    <p class="card-text">${pizza.price}</p>
+                </div>
+            </div>
+                    `
+                });
+            }
+    }).catch( (error) => {
+        console.error("Errore!");
+        console.log(error);
+    });
+    }
